--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-body": "^6.0.1",
     "koa-ratelimit": "^5.1.0",
     "koa-router": "^12.0.1",
+    "mongoose": "^8.13.1",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "winston": "^3.11.0"
